--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.android.volley:volley:1.0.0'
+
     testCompile 'junit:junit:4.12'
 }
