--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,9 +54,11 @@
         <activity
             android:name=".TiendaVitalActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".PerfilActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ProfesionalActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
