--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.android.support:support-v4:25.3.0'
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'com.google.zxing:android-integration:3.2.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.android.volley:volley:1.0.0'
 
